profile, transactions & detail

--- a/EmjayGlobal/Modules/Ship/UI/Ship.storyboard
+++ b/EmjayGlobal/Modules/Ship/UI/Ship.storyboard
@@ -7,6 +7,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--ShipVC-->
         <scene sceneID="s0d-6b-0kx">
@@ -15,13 +20,64 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="117" estimatedRowHeight="117" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="5Hg-fU-MWI">
+                                <rect key="frame" x="15" y="57" width="360" height="753"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="niM-3M-meO">
+                                    <rect key="frame" x="0.0" y="0.0" width="360" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkD-25-Y8N">
+                                            <rect key="frame" x="10" y="6.6666666666666679" width="57" height="17"/>
+                                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="nkD-25-Y8N" firstAttribute="leading" secondItem="niM-3M-meO" secondAttribute="leading" constant="10" id="NbZ-fF-BUN"/>
+                                        <constraint firstItem="nkD-25-Y8N" firstAttribute="centerY" secondItem="niM-3M-meO" secondAttribute="centerY" id="uJJ-79-rYX"/>
+                                    </constraints>
+                                </view>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="VgH-uE-46S">
+                                    <rect key="frame" x="0.0" y="225" width="360" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="CuB-aq-9Hm">
+                                        <rect key="frame" x="0.0" y="80" width="360" height="117"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CuB-aq-9Hm" id="H7j-u1-HHq">
+                                            <rect key="frame" x="0.0" y="0.0" width="360" height="117"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="9m0-KB-Cj4"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="gqw-ek-e5a"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="5Hg-fU-MWI" secondAttribute="bottom" id="1JX-QM-8v0"/>
+                            <constraint firstItem="5Hg-fU-MWI" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="BZ5-cx-5L7"/>
+                            <constraint firstItem="5Hg-fU-MWI" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="cC6-Yg-xxs"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="5Hg-fU-MWI" secondAttribute="trailing" constant="15" id="eFz-gJ-iRj"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tblV" destination="5Hg-fU-MWI" id="pQR-yK-TxX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="126" y="-2"/>
+            <point key="canvasLocation" x="124.61538461538461" y="-2.1327014218009479"/>
         </scene>
     </scenes>
     <resources>
