--- a/EmjayGlobal/Modules/Home/UI/Home.storyboard
+++ b/EmjayGlobal/Modules/Home/UI/Home.storyboard
@@ -7,6 +7,14 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Roboto-Light.ttf">
+            <string>Roboto-Light</string>
+        </array>
+        <array key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--HomeVC-->
         <scene sceneID="jgP-Qt-jNG">
@@ -15,9 +23,136 @@
                     <view key="view" contentMode="scaleToFill" id="xOY-D9-pQY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x2W-xJ-ULp">
+                                <rect key="frame" x="32" y="68" width="83" height="24"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start managing your Shipments and  logistics" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KUA-eW-xOL">
+                                <rect key="frame" x="32" y="102" width="350" height="42.5"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BJn-eA-sWG">
+                                <rect key="frame" x="20" y="164.5" width="374" height="45"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="8LF-2V-pwA">
+                                        <rect key="frame" x="10" y="13.5" width="18" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="fwC-Is-psN"/>
+                                            <constraint firstAttribute="width" constant="18" id="jH2-bD-Fhv"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Track your Shipment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oI9-CL-Olx">
+                                        <rect key="frame" x="38" y="5" width="258" height="35"/>
+                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="doneAccessory" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X5M-ty-hDz">
+                                        <rect key="frame" x="296" y="0.0" width="78" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="78" id="UfK-kI-Cxt"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="barCodeImg"/>
+                                        <connections>
+                                            <action selector="barcodeTap:" destination="z7m-dy-9rL" eventType="touchUpInside" id="JNk-Bk-9bB"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="X5M-ty-hDz" secondAttribute="trailing" id="4dl-BI-sc9"/>
+                                    <constraint firstAttribute="height" constant="45" id="DbP-mh-HdQ"/>
+                                    <constraint firstItem="X5M-ty-hDz" firstAttribute="leading" secondItem="oI9-CL-Olx" secondAttribute="trailing" id="LBg-0E-uPb"/>
+                                    <constraint firstItem="X5M-ty-hDz" firstAttribute="top" secondItem="BJn-eA-sWG" secondAttribute="top" id="MKy-xr-vpk"/>
+                                    <constraint firstItem="oI9-CL-Olx" firstAttribute="top" secondItem="BJn-eA-sWG" secondAttribute="top" constant="5" id="Od1-Zn-bLV"/>
+                                    <constraint firstAttribute="bottom" secondItem="X5M-ty-hDz" secondAttribute="bottom" id="TJs-1s-EWu"/>
+                                    <constraint firstItem="8LF-2V-pwA" firstAttribute="centerY" secondItem="BJn-eA-sWG" secondAttribute="centerY" id="WnH-mp-LfY"/>
+                                    <constraint firstItem="oI9-CL-Olx" firstAttribute="leading" secondItem="8LF-2V-pwA" secondAttribute="trailing" constant="10" id="bpt-be-8DR"/>
+                                    <constraint firstItem="8LF-2V-pwA" firstAttribute="leading" secondItem="BJn-eA-sWG" secondAttribute="leading" constant="10" id="dJo-7V-GGL"/>
+                                    <constraint firstAttribute="bottom" secondItem="oI9-CL-Olx" secondAttribute="bottom" constant="5" id="deq-6u-ewV"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="AACornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="AABorderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="AABorderColor">
+                                        <color key="value" red="0.15686274510000001" green="0.46274509800000002" blue="0.60392156860000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l69-Zd-AZy">
+                                <rect key="frame" x="0.0" y="229.5" width="414" height="632.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To see your Shipments, please log in." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DRA-Y4-rxp">
+                                        <rect key="frame" x="20" y="273.5" width="392" height="22"/>
+                                        <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_package" translatesAutoresizingMaskIntoConstraints="NO" id="COl-QD-M3m">
+                                        <rect key="frame" x="190" y="229.5" width="34" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="34" id="9po-aE-7b6"/>
+                                            <constraint firstAttribute="width" constant="34" id="oCv-Qc-seH"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bQP-Wk-Qba">
+                                        <rect key="frame" x="171.5" y="330.5" width="71" height="33"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="LOGIN">
+                                            <fontDescription key="titleFontDescription" name="Roboto-Bold" family="Roboto" pointSize="16"/>
+                                            <color key="baseForegroundColor" red="0.15686274510000001" green="0.46274509800000002" blue="0.60392156860000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="loginTap:" destination="z7m-dy-9rL" eventType="touchUpInside" id="gPv-DP-53E"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="DRA-Y4-rxp" firstAttribute="leading" secondItem="l69-Zd-AZy" secondAttribute="leading" constant="20" id="1bs-8F-QdI"/>
+                                    <constraint firstAttribute="trailing" secondItem="DRA-Y4-rxp" secondAttribute="trailing" constant="2" id="D7h-MG-RzS"/>
+                                    <constraint firstItem="DRA-Y4-rxp" firstAttribute="top" secondItem="COl-QD-M3m" secondAttribute="bottom" constant="10" id="QJd-3q-WAA"/>
+                                    <constraint firstItem="bQP-Wk-Qba" firstAttribute="top" secondItem="DRA-Y4-rxp" secondAttribute="bottom" constant="35" id="WYv-Sg-l6B"/>
+                                    <constraint firstItem="DRA-Y4-rxp" firstAttribute="centerY" secondItem="l69-Zd-AZy" secondAttribute="centerY" multiplier="0.9" id="dif-Re-VgP"/>
+                                    <constraint firstItem="COl-QD-M3m" firstAttribute="centerX" secondItem="l69-Zd-AZy" secondAttribute="centerX" id="eyX-oT-YJd"/>
+                                    <constraint firstItem="bQP-Wk-Qba" firstAttribute="centerX" secondItem="l69-Zd-AZy" secondAttribute="centerX" id="xRT-QI-PLw"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="YcT-gP-xCq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="l69-Zd-AZy" firstAttribute="top" secondItem="BJn-eA-sWG" secondAttribute="bottom" constant="20" id="0tU-ap-kVa"/>
+                            <constraint firstItem="KUA-eW-xOL" firstAttribute="top" secondItem="x2W-xJ-ULp" secondAttribute="bottom" constant="10" id="1eT-bK-Bx1"/>
+                            <constraint firstItem="YcT-gP-xCq" firstAttribute="trailing" secondItem="BJn-eA-sWG" secondAttribute="trailing" constant="20" id="CAA-ik-vNl"/>
+                            <constraint firstItem="x2W-xJ-ULp" firstAttribute="leading" secondItem="YcT-gP-xCq" secondAttribute="leading" constant="32" id="DoL-FQ-Xed"/>
+                            <constraint firstItem="x2W-xJ-ULp" firstAttribute="top" secondItem="YcT-gP-xCq" secondAttribute="top" constant="20" id="G72-7D-b7O"/>
+                            <constraint firstItem="l69-Zd-AZy" firstAttribute="leading" secondItem="YcT-gP-xCq" secondAttribute="leading" id="Od9-Hd-IdB"/>
+                            <constraint firstItem="KUA-eW-xOL" firstAttribute="leading" secondItem="YcT-gP-xCq" secondAttribute="leading" constant="32" id="SqC-bS-9c3"/>
+                            <constraint firstItem="YcT-gP-xCq" firstAttribute="trailing" secondItem="KUA-eW-xOL" secondAttribute="trailing" constant="32" id="Ww7-4G-hXe"/>
+                            <constraint firstItem="YcT-gP-xCq" firstAttribute="bottom" secondItem="l69-Zd-AZy" secondAttribute="bottom" id="cAn-nD-E0T"/>
+                            <constraint firstItem="BJn-eA-sWG" firstAttribute="leading" secondItem="YcT-gP-xCq" secondAttribute="leading" constant="20" id="fIt-SP-oy4"/>
+                            <constraint firstItem="YcT-gP-xCq" firstAttribute="trailing" secondItem="l69-Zd-AZy" secondAttribute="trailing" id="hbg-XB-WtE"/>
+                            <constraint firstItem="BJn-eA-sWG" firstAttribute="top" secondItem="KUA-eW-xOL" secondAttribute="bottom" constant="20" id="wf6-wO-4qG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="barCodeBtn" destination="X5M-ty-hDz" id="uIz-Qv-tAL"/>
+                        <outlet property="guestV" destination="l69-Zd-AZy" id="jh6-58-arn"/>
+                        <outlet property="search" destination="oI9-CL-Olx" id="FFQ-KV-Gyz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ffv-cU-TIw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,6 +160,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="barCodeImg" width="54" height="33"/>
+        <image name="ic_package" width="34" height="34"/>
+        <image name="ic_search" width="18" height="18"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
