--- a/EmjayGlobal/Modules/Track/UI/Track.storyboard
+++ b/EmjayGlobal/Modules/Track/UI/Track.storyboard
@@ -41,6 +41,9 @@
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="doneAccessory" value="YES"/>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="Y6W-OH-hqX" id="WPA-gd-1E8"/>
+                                        </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDb-v7-7XL">
                                         <rect key="frame" x="276" y="0.0" width="78" height="45"/>
