dot hidden residential

--- a/EmjayGlobal/Modules/Book/UI/Book.storyboard
+++ b/EmjayGlobal/Modules/Book/UI/Book.storyboard
@@ -233,6 +233,56 @@
             </objects>
             <point key="canvasLocation" x="124.61538461538461" y="-2.1327014218009479"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="uYl-le-wf5">
+            <objects>
+                <viewController id="w30-TY-F8R" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FZt-Zk-lv9">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oew-h1-ZCK" customClass="TPKeyboardAvoidingScrollView">
+                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fzK-yr-uCZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="763"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4P9-Pv-XHQ">
+                                                <rect key="frame" x="43" y="79" width="42" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="fzK-yr-uCZ" firstAttribute="height" secondItem="Oew-h1-ZCK" secondAttribute="height" id="5Cr-d3-G5D"/>
+                                    <constraint firstAttribute="bottom" secondItem="fzK-yr-uCZ" secondAttribute="bottom" id="FYK-Ry-Kxh"/>
+                                    <constraint firstItem="fzK-yr-uCZ" firstAttribute="width" secondItem="Oew-h1-ZCK" secondAttribute="width" id="QYI-7R-UHU"/>
+                                    <constraint firstAttribute="trailing" secondItem="fzK-yr-uCZ" secondAttribute="trailing" id="cPZ-rG-c46"/>
+                                    <constraint firstItem="fzK-yr-uCZ" firstAttribute="top" secondItem="Oew-h1-ZCK" secondAttribute="top" id="fFG-fG-SdJ"/>
+                                    <constraint firstItem="fzK-yr-uCZ" firstAttribute="leading" secondItem="Oew-h1-ZCK" secondAttribute="leading" id="ueb-eq-9Ik"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="pm6-31-YO0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="pm6-31-YO0" firstAttribute="bottom" secondItem="Oew-h1-ZCK" secondAttribute="bottom" id="86C-6q-y6w"/>
+                            <constraint firstItem="pm6-31-YO0" firstAttribute="trailing" secondItem="Oew-h1-ZCK" secondAttribute="trailing" id="8OI-r1-i2S"/>
+                            <constraint firstItem="Oew-h1-ZCK" firstAttribute="leading" secondItem="pm6-31-YO0" secondAttribute="leading" id="k2g-BY-m2k"/>
+                            <constraint firstItem="Oew-h1-ZCK" firstAttribute="top" secondItem="pm6-31-YO0" secondAttribute="top" id="teh-Ij-vID"/>
+                        </constraints>
+                    </view>
+                    <size key="freeformSize" width="390" height="844"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cjv-T1-SeG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="771" y="-2"/>
+        </scene>
     </scenes>
     <resources>
         <image name="ic_airFreight" width="65" height="42"/>
